fixed check basic auth
