# Openapi.json
@@ -15,6 +15,8 @@
       "get": {
         "summary": "Call all Persons from database",
         "operationId": "allPersons",
+        
+  
         "responses": {
           "200": {
             "description": "OK",
@@ -251,8 +253,7 @@
       }
       
     }
-  },
-  "security":[
+  },"security":[
     {
       "basicAuth": []
     }
